syntax = "proto3";

package auth;

option go_package = "auth.v1;authv1";

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc isAdmin(IsAdminRequest) returns (IsAdminResponse);
    rpc CreateApp(CreateAppRequest) returns (CreateAppResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
    int32 app_id = 3;
}

message LoginResponse {
    string token = 1;
}

message IsAdminRequest {
    int64 user_id = 1;
}

message IsAdminResponse {
    bool is_admin = 1;
}

message CreateAppRequest {
    string email = 1;
    string password = 2;
    string app_name = 3;
    string app_secret = 4;
}

message CreateAppResponse {
    int64 app_id = 1;
}